# First-UAE-AI

./: README.md
first-uae-ai/: .env.development  .env.example  .env.production  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
first-uae-ai/backend/: __init__.py  main.py
first-uae-ai/backend/api/: __init__.py
first-uae-ai/backend/core/: config.py  prompts.py  security.py
first-uae-ai/backend/database/: init_db.py  session.py
first-uae-ai/backend/models/: chat_log.py  user.py
first-uae-ai/backend/schemas/: chat.py  user.py
first-uae-ai/backend/services/: ai_service.py  logging_service.py
first-uae-ai/first-uae-ai/: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  requirements.txt
first-uae-ai/first-uae-ai/backend/: __init__.py  main.py
first-uae-ai/first-uae-ai/backend/api/routes/: admin.py  auth.py  chat.py  whatsapp.py
first-uae-ai/first-uae-ai/backend/core/: config.py  prompts.py  security.py
first-uae-ai/first-uae-ai/backend/database/: init_db.py  session.py
first-uae-ai/first-uae-ai/backend/models/: chat_log.py  user.py
first-uae-ai/first-uae-ai/backend/schemas/: chat.py
first-uae-ai/first-uae-ai/backend/services/: ai_service.py  logging_service.py
first-uae-ai/first-uae-ai/frontend/src/: index.html
first-uae-ai/first-uae-ai/frontend/src/admin/: index.html
first-uae-ai/frontend/src/: index.html
first-uae-ai/frontend/src/admin/: index.html
first-uae-ai/scripts/: deploy.sh
first-uae-ai/tests/integration/: test_whatsapp.py
first-uae-ai/tests/unit/: test_auth.py  test_chat.py
